# CANON_RAG

./: .gitignore  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
processed_data/Manual ecograf Aplio i700/: content.json
